--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -47,7 +47,8 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 <p>
 Powered by <a href="https://wax.dfuse.eosnation.io/">dfuse API</a>
 hosted by EOS Nation.<br/>
-Author: Ivan Kazmenko.<br/>
+Author: Ivan Kazmenko
+(<a href="https://wax.bloks.io/account/p4lqm.wam">my game account</a>).<br/>
 This site is <a href="https://github.com/GassaFM/alchemy">open source</a>.
 </p>
 </body>
