added links to other tools, fixed logs issue

--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -44,6 +44,23 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 </td></tr>
 </table>
 
+<p height="5px"></p>
+
+<table border="1px">
+<thead>
+<th colspan="1">See also:</th>
+</thead>
+<tr>
+<tr>
+<td align="center"><a href="https://rplanet.tools/generator">RPlanet Tools by Pigwig</a></td>
+</tr>
+<tr>
+<td align="center"><a href="https://bit.ly/3slAqHe">Color-coded spreadsheet by vyr77</a></td>
+</tr>
+</table>
+</td></tr>
+</table>
+
 <p>
 Powered by <a href="https://wax.dfuse.eosnation.io/">dfuse API</a>
 hosted by EOS Nation.<br/>
