--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -40,6 +40,12 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 <td align="center"><a href="./alchemy-log.html">Full Log</a></td>
 <td align="center"><a href="./alchemy-log.csv">CSV</a></td>
 </tr>
+<tr height="5px"></tr>
+<tr>
+<td align="center" colspan=2>
+<a href="./create/create.html">Element Creation Tool</a>
+</td>
+</tr>
 </table>
 </td></tr>
 </table>
