updated main page

--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -43,11 +43,9 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 <tr height="5px"></tr>
 <tr>
 <td align="center" colspan=2>
-<a href="./create/create.html">Element Creation Tool</a>
+<a href="./create/create.html">NEW: Element Creation Tool</a>
 </td>
 </tr>
-</table>
-</td></tr>
 </table>
 
 <p height="5px"></p>
@@ -58,10 +56,10 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 </thead>
 <tr>
 <tr>
-<td align="center"><a href="https://rplanet.tools/generator">RPlanet Tools by Pigwig</a></td>
+<td align="center"><a href="https://rplanet.tools">RPlanet Tools by Pigwig</a></td>
 </tr>
 <tr>
-<td align="center"><a href="https://bit.ly/3slAqHe">Color-coded spreadsheet by vyr77</a></td>
+<td align="center"><a href="https://docs.google.com/spreadsheets/d/1Bu1ZE22ujitrkRoLBp_uptfezdQ9cVhUpDoukXb-NGM">Color-coded spreadsheet by MikeNoLife</a></td>
 </tr>
 </table>
 </td></tr>
