added players table

--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -28,24 +28,31 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 <th align="center" style="font-weight:bold">CSV format</th>
 </tr>
 </thead>
-<tr>
+<tr style="background-color:#DDFFDD">
 <td align="center"><a href="./alchemy-recipes.html">Successful Recipes</a></td>
 <td align="center"><a href="./alchemy-recipes.csv">CSV</a></td>
 </tr>
-<tr>
+<tr style="background-color:#FFFFBB">
 <td align="center"><a href="./alchemy-table.html">All Recipes Tried</a></td>
 <td align="center"><a href="./alchemy-table.csv">CSV</a></td>
 </tr>
-<tr>
+<tr style="background-color:#FFDDDD">
 <td align="center"><a href="./alchemy-log.html">Full Log</a></td>
 <td align="center"><a href="./alchemy-log.csv">CSV</a></td>
 </tr>
 <tr height="5px"></tr>
-<tr>
-<td align="center" colspan=2>
-<a href="./create/create.html">NEW: Element Creation Tool</a>
+</tr>
+<td align="center" colspan=2 style="background-color:#FFBBFF">
+<a href="./alchemy-players.html">NEW: Players Table</a>
 </td>
 </tr>
+<tr>
+<td align="center" colspan=2 style="background-color:#DDDDFF">
+<a href="./create/create.html">Element Creation Tool</a>
+</td>
+<tr>
+</table>
+</td></tr>
 </table>
 
 <p height="5px"></p>
@@ -56,10 +63,10 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 </thead>
 <tr>
 <tr>
-<td align="center"><a href="https://rplanet.tools">RPlanet Tools by Pigwig</a></td>
+<td align="center"><a href="https://rplanet.tools/generator">RPlanet Tools by Pigwig</a></td>
 </tr>
 <tr>
-<td align="center"><a href="https://docs.google.com/spreadsheets/d/1Bu1ZE22ujitrkRoLBp_uptfezdQ9cVhUpDoukXb-NGM">Color-coded spreadsheet by MikeNoLife</a></td>
+<td align="center"><a href="https://bit.ly/3slAqHe">Color-coded spreadsheet by vyr77</a></td>
 </tr>
 </table>
 </td></tr>
