fixed main page links to "see also"

--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -62,11 +62,10 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 <th colspan="1">See also:</th>
 </thead>
 <tr>
-<tr>
-<td align="center"><a href="https://rplanet.tools/generator">RPlanet Tools by Pigwig</a></td>
+<td align="center"><a href="https://rplanet.tools">RPlanet Tools by Pigwig</a></td>
 </tr>
 <tr>
-<td align="center"><a href="https://bit.ly/3slAqHe">Color-coded spreadsheet by vyr77</a></td>
+<td align="center"><a href="https://docs.google.com/spreadsheets/d/1Bu1ZE22ujitrkRoLBp_uptfezdQ9cVhUpDoukXb-NGM">Color-coded spreadsheet by MikeNoLife</a></td>
 </tr>
 </table>
 </td></tr>
