--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -28,7 +28,11 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 <th align="center" style="font-weight:bold">CSV format</th>
 </tr>
 </thead>
-<tr style="background-color:#DDFFDD">
+<tr style="background-color:#EEFFEE">
+<td align="center"><a href="./recipes.html">Recipes Lite</a></td>
+<td align="center"><a href="./recipes.csv">CSV</a></td>
+</tr>
+<tr style="background-color:#CCEECC">
 <td align="center"><a href="./alchemy-recipes.html">Successful Recipes</a></td>
 <td align="center"><a href="./alchemy-recipes.csv">CSV</a></td>
 </tr>
@@ -43,7 +47,7 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 <tr height="5px"></tr>
 </tr>
 <td align="center" colspan=2 style="background-color:#FFBBFF">
-<a href="./alchemy-players.html">NEW: Players Table</a>
+<a href="./alchemy-players.html">Players Table</a>
 </td>
 </tr>
 <tr>
