--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -32,10 +32,12 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 <td align="center"><a href="./recipes.html">Recipes Lite</a></td>
 <td align="center"><a href="./recipes.csv">CSV</a></td>
 </tr>
+<!-- disabled for now, incorrect stats
 <tr style="background-color:#CCEECC">
 <td align="center"><a href="./alchemy-recipes.html">Successful Recipes</a></td>
 <td align="center"><a href="./alchemy-recipes.csv">CSV</a></td>
 </tr>
+-->
 <tr style="background-color:#FFFFBB">
 <td align="center"><a href="./alchemy-table.html">All Recipes Tried</a></td>
 <td align="center"><a href="./alchemy-table.csv">CSV</a></td>
@@ -52,7 +54,12 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 </tr>
 <tr>
 <td align="center" colspan=2 style="background-color:#DDDDFF">
-<a href="./create/create.html">Element Creation Tool</a>
+<a href="./create/create-ng.html">NEW Element Creation Tool</a>
+</td>
+</tr>
+<tr>
+<td align="center" colspan=2 style="background-color:#EEEEFF">
+<a href="./create/create.html">OLD Element Creation Tool</a>
 </td>
 </tr>
 </table>
