added links to other fansites

--- a/public_html/alchemy/index.html
+++ b/public_html/alchemy/index.html
@@ -82,6 +82,15 @@ It contains recipes for crafting the elements, live from the blockchain.</p>
 </td></tr>
 </table>
 
+<p>My fansites for other games:
+<a href="../metal/index.html">Metal War</a> (WAX) and Prospectors:
+<a href="../grand/index.html">Grand Land</a>
+(WAX, <span style="color:red">new!</span>),
+<a href="../index.html">Wild West</a> (EOS),
+and
+<a href="../wax/index.html">Yukon</a> (WAX).
+</p>
+
 <p>
 Powered by <a href="https://wax.dfuse.eosnation.io/">dfuse API</a>
 hosted by EOS Nation.<br/>
